syntax = "proto3";

option go_package = ".;bootstrap_api";

package bootstrap_api;

service BootstrapAPI {
  rpc Connect(Info) returns (stream Notification) {}
}

enum Type {
    PING = 0;
    ADD = 1;
    REMOVE = 2;
}

// swagger:enum Peer
message Info {
  string local_address = 1;
  string remote_address = 2;
}

// swagger:enum Notification
message Notification {
  Type type = 1;
  Info info = 2;
}
